clase-1/PRACTICA/y.output
Terminals unused in grammar

   CONST_FLOAT
   ELSE_T
   IF_T
   OP_DISTINTO
   OP_COMP
   OP_MAYORIGUAL
   OP_MAYOR
   OP_MENOR
   OP_MENORIGUAL
   LLAVE_C
   LLAVE_A
   PARENT_C
   PARENT_A
   OP_AS
   WHILE_T
   SEPARADOR_T
   FLOAT_T
   INTEGER_T
   DIM_T
   AS_T
   TOKEN_PUT
   GET_T
   CONST_T
   TOKEN_AND
   TOKEN_OR
   MAX_TOKEN
   ID_T
   WRITE_T
   ENDDEC_T
   DECVAR_T


Gramática

    0 $accept: programa $end

    1 programa: grammar SEP_LINEA
    2         | grammar SEP_LINEA "\\n" grammar SEP_LINEA

    3 grammar: expr

    4 expr: expr OP_SUM expr
    5     | expr OP_MENOS expr
    6     | expr OP_MUL expr
    7     | expr OP_DIVISION expr
    8     | CONST_STRING
    9     | CONST_INT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CONST_INT (258) 9
CONST_FLOAT (259)
CONST_STRING (260) 8
ELSE_T (261)
IF_T (262)
OP_DISTINTO (263)
OP_COMP (264)
OP_MAYORIGUAL (265)
OP_MAYOR (266)
OP_MENOR (267)
OP_MENORIGUAL (268)
LLAVE_C (269)
LLAVE_A (270)
PARENT_C (271)
PARENT_A (272)
OP_DIVISION (273) 7
OP_AS (274)
OP_SUM (275) 4
OP_MUL (276) 6
WHILE_T (277)
SEP_LINEA (278) 1 2
SEPARADOR_T (279)
FLOAT_T (280)
INTEGER_T (281)
DIM_T (282)
AS_T (283)
TOKEN_PUT (284)
GET_T (285)
CONST_T (286)
TOKEN_AND (287)
TOKEN_OR (288)
MAX_TOKEN (289)
ID_T (290)
WRITE_T (291)
ENDDEC_T (292)
DECVAR_T (293)
OP_MENOS (294) 5
"\\n" (295) 2


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
programa (42)
    en la izquierda: 1 2, en la derecha: 0
grammar (43)
    en la izquierda: 3, en la derecha: 1 2
expr (44)
    en la izquierda: 4 5 6 7 8 9, en la derecha: 3 4 5 6 7


estado 0

    0 $accept: . programa $end

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    programa  ir al estado 3
    grammar   ir al estado 4
    expr      ir al estado 5


estado 1

    9 expr: CONST_INT .

    $default  reduce usando la regla 9 (expr)


estado 2

    8 expr: CONST_STRING .

    $default  reduce usando la regla 8 (expr)


estado 3

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


estado 4

    1 programa: grammar . SEP_LINEA
    2         | grammar . SEP_LINEA "\\n" grammar SEP_LINEA

    SEP_LINEA  desplazar e ir al estado 7


estado 5

    3 grammar: expr .
    4 expr: expr . OP_SUM expr
    5     | expr . OP_MENOS expr
    6     | expr . OP_MUL expr
    7     | expr . OP_DIVISION expr

    OP_DIVISION  desplazar e ir al estado 8
    OP_SUM       desplazar e ir al estado 9
    OP_MUL       desplazar e ir al estado 10
    OP_MENOS     desplazar e ir al estado 11

    $default  reduce usando la regla 3 (grammar)


estado 6

    0 $accept: programa $end .

    $default  aceptar


estado 7

    1 programa: grammar SEP_LINEA .
    2         | grammar SEP_LINEA . "\\n" grammar SEP_LINEA

    "\\n"  desplazar e ir al estado 12

    $default  reduce usando la regla 1 (programa)


estado 8

    7 expr: expr OP_DIVISION . expr

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    expr  ir al estado 13


estado 9

    4 expr: expr OP_SUM . expr

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    expr  ir al estado 14


estado 10

    6 expr: expr OP_MUL . expr

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    expr  ir al estado 15


estado 11

    5 expr: expr OP_MENOS . expr

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    expr  ir al estado 16


estado 12

    2 programa: grammar SEP_LINEA "\\n" . grammar SEP_LINEA

    CONST_INT     desplazar e ir al estado 1
    CONST_STRING  desplazar e ir al estado 2

    grammar  ir al estado 17
    expr     ir al estado 5


estado 13

    4 expr: expr . OP_SUM expr
    5     | expr . OP_MENOS expr
    6     | expr . OP_MUL expr
    7     | expr . OP_DIVISION expr
    7     | expr OP_DIVISION expr .

    $default  reduce usando la regla 7 (expr)


estado 14

    4 expr: expr . OP_SUM expr
    4     | expr OP_SUM expr .
    5     | expr . OP_MENOS expr
    6     | expr . OP_MUL expr
    7     | expr . OP_DIVISION expr

    OP_DIVISION  desplazar e ir al estado 8
    OP_MUL       desplazar e ir al estado 10

    $default  reduce usando la regla 4 (expr)


estado 15

    4 expr: expr . OP_SUM expr
    5     | expr . OP_MENOS expr
    6     | expr . OP_MUL expr
    6     | expr OP_MUL expr .
    7     | expr . OP_DIVISION expr

    $default  reduce usando la regla 6 (expr)


estado 16

    4 expr: expr . OP_SUM expr
    5     | expr . OP_MENOS expr
    5     | expr OP_MENOS expr .
    6     | expr . OP_MUL expr
    7     | expr . OP_DIVISION expr

    OP_DIVISION  desplazar e ir al estado 8
    OP_MUL       desplazar e ir al estado 10

    $default  reduce usando la regla 5 (expr)


estado 17

    2 programa: grammar SEP_LINEA "\\n" grammar . SEP_LINEA

    SEP_LINEA  desplazar e ir al estado 18


estado 18

    2 programa: grammar SEP_LINEA "\\n" grammar SEP_LINEA .

    $default  reduce usando la regla 2 (programa)
